--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to My GitHub Pages Site</title>
+  <title>GYF</title>
 </head>
 <body>
-  <h1>Hello, World!</h1>
-  <p>This is my personal website hosted on GitHub Pages.</p>
+  <h1>Hello!</h1>
+  <p>My personal website is under construction.</p>
 </body>
 </html>
