--- a/cv.html
+++ b/cv.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collective Behavior of Multicellular Systems</title>
+    <title>Cv</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Collective Behavior of Multicellular Systems</h1>
-        <img src="static/images/hero_image.jpg" alt="Placeholder Image" class="hero-image">
+        <h1>Cv</h1>
     </header>
     <nav>
         <ul>
@@ -21,9 +20,8 @@
             <li><a href="projects.html">Projects</a></li>
         </ul>
     </nav>
-    <footer>
-        <p>Contact: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-        <p>Follow me on: <a href="#">GitHub</a> | <a href="#">Twitter</a> | <a href="#">LinkedIn</a></p>
-    </footer>
+    <main>
+        <p>Content for Cv goes here.</p>
+    </main>
 </body>
 </html>
